--- a/src/windowFXML.fxml
+++ b/src/windowFXML.fxml
@@ -26,21 +26,32 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="443.0" style="-fx-background-color: white;">
                <children>
-                  <Pane fx:id="listAllFlightReservationsPane" layoutX="54.0" layoutY="54.0" prefHeight="398.0" prefWidth="505.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <Pane fx:id="exitPane" layoutX="10.0" layoutY="10.0" prefHeight="398.0" prefWidth="445.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Label alignment="TOP_LEFT" prefHeight="70.0" prefWidth="517.0" text="List all passenger reservations for specific flight ">
+                        <Label layoutX="183.0" layoutY="178.0" text="Would you like to exit?">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <Button layoutX="233.0" layoutY="199.0" mnemonicParsing="false" onAction="#exitApplication" prefHeight="25.0" prefWidth="51.0" text="Exit" />
+                     </children>
+                  </Pane>
+                  <Pane fx:id="newReservationPane" layoutX="24.0" layoutY="24.0" prefHeight="398.0" prefWidth="517.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label text="Create new reservation">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                     </children></Pane>
-                  <Pane fx:id="listAllReservationsPane" layoutX="10.0" layoutY="10.0" prefHeight="398.0" prefWidth="445.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Label alignment="TOP_LEFT" prefHeight="70.0" prefWidth="453.0" text="List all passenger reservations for all flights" wrapText="true">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                        </Label>
+                        <Button layoutX="122.0" layoutY="174.0" mnemonicParsing="false" onAction="#addNewReservation" text="Add Reservation" />
+                        <Label layoutX="14.0" layoutY="46.0" text="Flight Number" />
+                        <Label layoutX="14.0" layoutY="78.0" text="Passenger ID" />
+                        <Label layoutX="14.0" layoutY="112.0" text="Passenger Name" />
+                        <Label layoutX="14.0" layoutY="144.0" text="Seat Number" />
+                        <TextField fx:id="flightNumberRes" layoutX="122.0" layoutY="42.0" promptText="Flight Number" />
+                        <TextField fx:id="PassengerIDRes" layoutX="122.0" layoutY="74.0" promptText="Passenger ID" />
+                        <TextField fx:id="passengerNameRes" layoutX="122.0" layoutY="108.0" promptText="Passenger Name" />
+                        <TextField fx:id="seatNumberRes" layoutX="122.0" layoutY="140.0" promptText="Seat Number" />
                      </children>
                   </Pane>
                   <Pane fx:id="newFlightPane" prefHeight="398.0" prefWidth="517.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -60,21 +71,11 @@
                         <Label layoutX="19.0" layoutY="58.0" text="Flight Number:" />
                         <Label layoutX="19.0" layoutY="97.0" text="Flight Date:" />
                         <Label layoutX="19.0" layoutY="178.0" text="Arrival Time:" />
-                        <Label layoutX="19.0" layoutY="224.0" text="Departure Time:" />
+                        <Label layoutX="19.0" layoutY="224.0" text="Departure City:" />
                         <Label layoutX="19.0" layoutY="135.0" text="Departure Time:" />
                         <Label layoutX="19.0" layoutY="267.0" text="Arrival City:" />
                         <Label layoutX="19.0" layoutY="308.0" text="Available Seats:" />
                         <Button layoutX="173.0" layoutY="349.0" mnemonicParsing="false" onAction="#addFlight" text="Add Flight" />
-                     </children>
-                  </Pane>
-                  <Pane fx:id="exitPane" layoutX="10.0" layoutY="10.0" prefHeight="398.0" prefWidth="445.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Label layoutX="183.0" layoutY="178.0" text="Would you like to exit?">
-                           <font>
-                              <Font size="15.0" />
-                           </font>
-                        </Label>
-                        <Button layoutX="233.0" layoutY="199.0" mnemonicParsing="false" onAction="#exitApplication" prefHeight="25.0" prefWidth="51.0" text="Exit" />
                      </children>
                   </Pane>
                   <Pane fx:id="seatMapPane" layoutX="24.0" layoutY="24.0" prefHeight="398.0" prefWidth="445.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -86,25 +87,8 @@
                         </Label>
                         <TextArea fx:id="seatMapArea" editable="false" layoutX="14.0" layoutY="35.0" prefHeight="353.0" prefWidth="492.0" />
                         <Button layoutX="195.0" layoutY="5.0" mnemonicParsing="false" onAction="#updatSeatMap" text="Update Seat Map" />
+                        <TextField fx:id="flightNumberOnMapField" layoutX="317.0" layoutY="5.0" promptText="Flight Number Here" />
                      </children></Pane>
-                  <Pane fx:id="newReservationPane" layoutX="24.0" layoutY="24.0" prefHeight="398.0" prefWidth="517.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Label text="Create new reservation">
-                           <font>
-                              <Font size="24.0" />
-                           </font>
-                        </Label>
-                        <Button layoutX="122.0" layoutY="174.0" mnemonicParsing="false" onAction="#addNewReservation" text="Add Reservation" />
-                        <Label layoutX="14.0" layoutY="46.0" text="Flight Number" />
-                        <Label layoutX="14.0" layoutY="78.0" text="Passenger ID" />
-                        <Label layoutX="14.0" layoutY="112.0" text="Passenger Name" />
-                        <Label layoutX="14.0" layoutY="144.0" text="Seat Number" />
-                        <TextField fx:id="flightNumberRes" layoutX="122.0" layoutY="42.0" promptText="Flight Number" />
-                        <TextField fx:id="PassengerIDRes" layoutX="122.0" layoutY="74.0" promptText="Passenger ID" />
-                        <TextField fx:id="passengerNameRes" layoutX="122.0" layoutY="108.0" promptText="Passenger Name" />
-                        <TextField fx:id="seatNumberRes" layoutX="122.0" layoutY="140.0" promptText="Seat Number" />
-                     </children>
-                  </Pane>
                   <Pane fx:id="listAllFlightsPane" layoutX="34.0" layoutY="34.0" prefHeight="398.0" prefWidth="445.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <Label layoutY="-3.0" text="Information of all flights">
@@ -114,6 +98,27 @@
                         </Label>
                         <TextArea fx:id="listAllFlightsArea" editable="false" layoutX="11.0" layoutY="39.0" prefHeight="353.0" prefWidth="492.0" />
                      </children></Pane>
+                  <Pane fx:id="listAllFlightReservationsPane" layoutX="54.0" layoutY="54.0" prefHeight="398.0" prefWidth="505.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label alignment="TOP_LEFT" prefHeight="70.0" prefWidth="517.0" text="List all passenger reservations for specific flight ">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <TextArea fx:id="listOfSpecificPassangerReservations" layoutX="20.0" layoutY="99.0" prefHeight="317.0" prefWidth="517.0" />
+                        <TextField fx:id="SpecificFlightTextField" layoutX="123.0" layoutY="65.0" promptText="Enter Flight Number" />
+                        <Button fx:id="SpecificFlightButton" layoutX="348.0" layoutY="65.0" mnemonicParsing="false" onAction="#showSpecificFlightReservations" text="Search" />
+                     </children></Pane>
+                  <Pane fx:id="listAllReservationsPane" layoutX="10.0" layoutY="10.0" prefHeight="398.0" prefWidth="445.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label alignment="TOP_LEFT" prefHeight="70.0" prefWidth="453.0" text="List all passenger reservations for all flights" wrapText="true">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <TextArea fx:id="listOfAllPassangerReservations" layoutX="10.0" layoutY="45.0" prefHeight="364.0" prefWidth="517.0" />
+                     </children>
+                  </Pane>
                </children>
             </AnchorPane>
         </items>
